# ontology-next

./: .env.example  .gitattributes  .gitignore  LICENSE  PLACEHOLDERS.md  README.md  docker-compose-cdc.yml  docker-compose.yml
.github/workflows/: ci.yml  secret-scan.yml
backend/: PLACEHOLDERS.md  pom.xml
backend/src/main/resources/: application.yml
backend/src/main/resources/graphql/: actions.graphqls  agent.graphqls  ontology.graphqls  schema.graphqls
docker/cdc/: init-source.sql  register-connector.sh
docker/n8n/templates/: customer-onboarding.json  daily-import.json
docker/postgres/: init.sql
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/graphql/: client.ts  mutations.ts  queries.ts
frontend/src/components/layout/: Layout.tsx  Sidebar.tsx  TopBar.tsx
frontend/src/components/shared/: ErrorBoundary.tsx
frontend/src/pages/: ActionCenter.tsx  AiChat.tsx  ApiKeys.tsx  ConnectorManager.tsx  Dashboard.tsx  GraphView.tsx  KnowledgeBase.tsx  ObjectExplorer.tsx  OntologyBuilder.tsx  SettingsPage.tsx  SupportPage.tsx
frontend/src/store/: ontologyStore.ts
frontend/src/types/: index.ts
sdks/: README.md
sdks/python/: pyproject.toml
sdks/python/nexo_ontology/: __init__.py  client.py
sdks/python/tests/: test_client.py
sdks/typescript/: package.json  tsconfig.json
sdks/typescript/src/: NexoClient.ts  index.ts
sdks/typescript/test/: client.test.ts
todo/: fix-01-auth-enforcement.md  fix-02-rls-policies.md  fix-03-pluggable-llm-provider.md  fix-04-to-10-remaining.md
(+206 files in other folders)
