[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nexo-ontology"
version = "0.1.0"
description = "Python client for the NEXO Ontology Fabric"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[tool.setuptools.packages.find]
include = ["nexo_ontology*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
